Fix dark mode bruh (#3289)

--- a/apps/web/src/app/global.scss
+++ b/apps/web/src/app/global.scss
@@ -23,10 +23,3 @@ html {
 body {
   container-type: inline-size;
 }
-
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    @include dark;
-  }
-}
